--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div id="user_nav">
-    <%= link_to 'Sign in with GitHub', '/auth/github' %>
-  </div>
-
+  <% if current_user %>
+    Welcome <strong><%= current_user.name %></strong>!
+    <%= link_to "Sign out", signout_path, id: "sign_out" %>
+  <% else %>
+    <%= link_to "Sign in with Github", "/auth/github", id: "sign_in" %>
+  <% end %>
 <%= yield %>
 
 </body>
