--- a/app/views/achievements/index.html.erb
+++ b/app/views/achievements/index.html.erb
@@ -4,6 +4,12 @@
   <ul>
     <li>
       <%= achievement.task %>
+      <%= form_for @vote do |f| %>
+        <%= f.select(
+          [['Ooh, teach me how to do that!', 1, {count: 2}],
+            ['I can already do that', 2, {count: -1}],
+            ['No, thanks. Not interested.', 3, {count: 0}], 3]) %>
+      <%end%>
     </li>
   </ul>
 <% end %>
