--- a/app/views/achievements/index.html.erb
+++ b/app/views/achievements/index.html.erb
@@ -4,11 +4,12 @@
   <ul>
     <li>
       <%= achievement.task %>
-      <%= form_for @vote, :url => {method: :put, action: :update, controller: :votes} do |f| %>
-        <%= f.select(:count,
-          [['Ooh, teach me how to do that!', 1, {count: 2}],
-            ['I can already do that.', 2, {count: -1}],
-            ['No, thanks. Not interested.', 3, {count: 0}]]) %>
+      <%= form_for @vote do |f| %>
+        <%= f.select(:weighting,
+          [['Ooh, teach me how to do that!', 2],
+            ['Oh, please, I can already do that.', -1],
+            ['No, thanks. Not interested.', 0]]) %>
+         <%= f.hidden_field :achievement_id, :value => achievement.id %>
         <%= f.submit 'Submit' %>
       <%end%>
     </li>
