--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,11 @@
     <%= link_to "Sign out", signout_path, id: "sign_out" %>
   </div>
   <% end %>
+  <% if flash.any? %>
+    <div id="flash">
+      <%= flash[:notice] %>
+    </div>
+  <% end %>
 <%= yield %>
 
 </body>
