--- a/app/views/achievements/index.html.erb
+++ b/app/views/achievements/index.html.erb
@@ -1,7 +1,7 @@
 <h2>Today Someone Figured Out How To...</h2>
 <p></p>
 <% if @achievements.empty? %>
-<p>Looks like there's nothing new to vote on. <%= link_to 'What have you figured out today?', new_achievement_path%></p>
+  <p>Looks like there's nothing new to vote on. <%= link_to 'What have you figured out today?', new_achievement_path%></p>
 <% else %>
   <ul>
     <% @achievements.each do |achievement| %>
@@ -18,17 +18,20 @@
       </li>
     <% end %>
   </ul>
-  <%= button_to 'Add Your Own', new_achievement_path%>
+  <%= link_to 'Add Your Own', new_achievement_path%>
 <% end %>
 
 <h2>We Want to Learn How To...</h2>
-<p>Here are the top 5 things people would like to learn how to do:</p>
-<ul>
-  <% @top_achievements.each do |achievement| %>
-    <li>
-      <%= achievement['task'] %>
-    </li>
-  <% end %>
-</ul>
-
+<% if @top_achievements.empty? %>
+  <p>Nothing's been voted on yet. Better start voting!</p>
+<% else %>
+  <p>Here are the top 5 things people would like to learn how to do:</p>
+  <ul>
+    <% @top_achievements.each do |achievement| %>
+      <li>
+        <%= achievement['task'] %>
+      </li>
+    <% end %>
+  </ul>
+<% end %>
 
