--- a/app/views/achievements/new.html.erb
+++ b/app/views/achievements/new.html.erb
@@ -4,5 +4,5 @@
 
 <%= form_for @achievement do |f| %>
   <%= f.text_area :task, cols: 80, rows: 5 %><br>
-  <%= f.submit 'Submit' %>
+  <%= f.submit 'Submit', class: "button" %>
 <% end %>
