styled past achievements and votes

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,3 +17,15 @@
 .name {
   color: white;
 }
+
+.past {
+  list-style: none;
+  color: #696569;
+  font-style: italic;
+  margin-left: 0px;
+}
+
+.popular {
+  list-style: none;
+  font-size: 1.2em;
+}
