--- a/app/views/achievements/index.html.erb
+++ b/app/views/achievements/index.html.erb
@@ -13,7 +13,7 @@
     <% else %>
       <ul>
         <% @achieved.each do |achievement| %>
-          <li><%= achievement.task %></li>
+          <li class="past"><%= achievement.task %></li>
         <% end %>
       </ul>
     <% end %>
@@ -26,7 +26,7 @@
     <% else %>
       <ul>
         <% @achievements.each do |achievement| %>
-          <li>
+          <li class="popular">
             <%= achievement.task %>
               <%= form_for @vote do |f| %>
                 <%= f.select(:weighting,
@@ -46,7 +46,7 @@
     <% else %>
       <ul>
         <% @voted_on.each do |voted_achievement| %>
-          <li><%= voted_achievement.task %></li>
+          <li class="past"><%= voted_achievement.task %></li>
         <% end %>
       </ul>
     <% end %>
@@ -59,14 +59,15 @@
       <p>Here are the top 5 things people would like to learn how to do:</p>
       <ul>
         <% @top_achievements.each do |achievement| %>
-          <li>
+          <li class="popular">
             <%= achievement['task'] %>
           </li>
+          <br>
         <% end %>
       </ul>
     <% end %>
   </div>
 </div>
 
-<p><%= link_to "Edit Achievements", '/achievements/edit' %></p>
+
 
