Added edit link to nav bar

--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -2,6 +2,9 @@
 
 <% if current_user %>
     <li class="name">Welcome <strong><%= current_user.name %></strong>!</li>
+    <% if current_user.admin? %>
+      <li><%= link_to "Edit Achievements", 'achievements/edit' %></li>
+    <% end %>
     <li><%= link_to "Sign out", signout_path, id: "sign_out" %></li>
 <% end %>
 
